<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient_bg"
    tools:context=".Activity.ForgotPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_option_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgot_password_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/sfprotextmedium"
                />
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/sfprotextregular"/>

            <FrameLayout
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/white_bg"
                >
                <EditText
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:maxLength="25"
                    android:id="@+id/et_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_bg"
                    android:hint="@string/email_phone"
                    android:textColorHint="#1e2930"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/sfprotextregular"
                    />
            </FrameLayout>
            <TextView
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/tv_forgot_email_error"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/emailphone_error"
                android:textSize="@dimen/_10ssp"
                android:textColor="@android:color/holo_red_dark"
                android:fontFamily="@font/sfprotextregular"
                />





            <TextView
                android:background="@drawable/login_option_btn_green"
                android:onClick="submit"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/submit"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/sfprotextregular"
                android:textSize="@dimen/_12ssp"
                />

            <TextView

                android:id="@+id/tv_signin"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10ssp"
                android:padding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:gravity="center"
                android:alpha="0.5"
                android:textColor="@color/white"
                android:fontFamily="@font/sfprotextregular"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/_12ssp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/login_option_btn_green"
                />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>