<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient_bg"
    tools:context=".Activity.Login">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_option_bg"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_createaccount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/sfprotextmedium"
                />



            <FrameLayout
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/white_bg"
                >
                <EditText
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:maxLength="25"
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_bg"
                    android:hint="@string/email_address"
                    android:textColorHint="#1e2930"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/sfprotextregular"
                    />

            </FrameLayout>
            <TextView
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/tv_login_email_error"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/email_error"
                android:textSize="@dimen/_10ssp"
                android:textColor="@android:color/holo_red_dark"
                android:fontFamily="@font/sfprotextregular"
                />


            <FrameLayout
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_gravity="center"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/white_bg"
                >
                <EditText
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:id="@+id/et_login_pswrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_bg"
                    android:hint="@string/password"
                    android:textColorHint="#1e2930"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/sfprotextregular"
                    />

            </FrameLayout>

            <TextView
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/tv_login_pswrd_error"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/password_error"
                android:textSize="@dimen/_10ssp"
                android:textColor="@android:color/holo_red_dark"
                android:fontFamily="@font/sfprotextregular"
                />






            <TextView
                android:background="@drawable/login_option_btn_green"
                android:onClick="signin"
                android:layout_marginTop="@dimen/_30sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/sign_in"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/sfprotextregular"
                android:textSize="@dimen/_12ssp"
                android:layout_weight="1"
                />

            <TextView
                android:background="?attr/selectableItemBackground"
                android:id="@+id/forgot_password"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:gravity="end"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/sfprotextregular"
                />

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/tv_createaccount"
        android:layout_marginTop="@dimen/_50sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10ssp"
        android:padding="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:gravity="center"
        android:alpha="0.5"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprotextregular"
        android:layout_gravity="center|bottom"
        android:textSize="@dimen/_12ssp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/login_option_btn_green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>